--- a/src/Covid19/style.module.css
+++ b/src/Covid19/style.module.css
@@ -16,6 +16,13 @@
   flex: 1;
 }
 
+.source {
+  margin-top: 20px;
+  font-size: 9px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: end;
+}
+
 @media only screen and (max-width: 900px) {
   .container {
     padding: 0px;
