--- a/src/Covid19/style.module.css
+++ b/src/Covid19/style.module.css
@@ -18,8 +18,7 @@
 }
 
 .source {
-  margin-top: 20px;
-  margin-right: 20px;
+  margin: 20px;
   font-size: 9px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: end;
