--- a/src/Covid19/style.module.css
+++ b/src/Covid19/style.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding-top: 20px 40px;
+  padding-top: 20px 50px;
   width: 90%;
   margin: 0 auto;
   height: 600px;
@@ -17,11 +17,14 @@
   flex: 1;
 }
 
-.source {
-  margin: 20px;
-  font-size: 9px;
+.footer {
+  margin: 30px 0px 5px 0px;
+  padding: 10px;
+  font-size: 11px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: end;
+  text-align: center;
+  background-color: #e6e6e6;
 }
 
 .title {
