--- a/src/Covid19/style.module.css
+++ b/src/Covid19/style.module.css
@@ -37,6 +37,18 @@
   color: white;
 }
 
+.radioContainer {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 12px;
+  font-weight: 800;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.radio {
+  padding: 20px;
+}
+
 @media only screen and (max-width: 880px) {
   .container {
     padding: 0px;
